--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h2>Welcome to the AboutPage  avakash</h2>
+<h2>Welcome to the About Page</h2>
+
+<%= link_to 'Link to article listing', articles_path %>
+<br>
+<%= link_to 'Link to Home Page', root_path %>
