--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
 <h1>Welcome to the Home Page</h1>
+
+
+<%= link_to 'Link to article listing', articles_path %>
+<br>
+<%= link_to 'Link to About Page', about_path %>
