--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,16 @@
-<h1>Welcome to the Home Page</h1>
+<div id = "page-content">
+  <div class="container" id="home-container">
+     <div class="jumbotron text-center text-white"  style="background-image: url('https://media.istockphoto.com/photos/brown-smooth-wood-surface-picture-id1183955880?k=20&m=1183955880&s=612x612&w=0&h=J6ZQc_eP2IXyBmtG2Fl6ZIIujlZjubbzpMphqN8f9a8='); background-position: center center; background-repeat: no-repeat; background-size: cover; height: 425px" >
+       <h1 class="display-4">Alpha Blog</h1>
+       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+       <hr class="my-4">
+       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+       <p class="lead">
+         <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+       </p>
+     </div>
+  </div>
+</div>
 
 
-<%= link_to 'Link to article listing', articles_path %>
-<br>
-<%= link_to 'Link to About Page', about_path %>
+
