--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,8 +1,7 @@
-<h1>Edit Article</h1>
-
+<div id = "page-content">
+<h1 class="text-center mt-4">Edit Article</h1>
 <%= render 'form' %>
+</div>
 
-
-<%= link_to 'Cancel and Return to article listing', articles_path %>
 
 
