--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,7 @@
-<h1>Create a new Article</h1>
-
+<div id = "page-content">
+<h1 class="text-center mt-4">Create A New Article</h1>
 <%= render 'form' %>
 
 
-<%= link_to 'Cancel and Return to article listing', articles_path %>
+
+</div>
