--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
       </div>
     
       <div class="input-group justify-content-center mb-3">
-          <%= f.submit "Sign Up", class: "btn btn-outline-light btn-lg text-center" %>
+          <%= f.submit(@user.new_record? ? "Sign Up" : "Update account", class: "btn btn-outline-light btn-lg text-center") %>
       </div>
     <% end %>
     </div>
