--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,14 +13,46 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        
-        <%= link_to "Articles", articles_path, class: "nav-link" %>
-      </li>
       <li class="nav-item">
-        <%= link_to "New Article", new_article_path(@articles), class: "nav-link" %>
+        <%= link_to "Bloggers", users_path, class: "nav-link" %>
       </li>
-      
+     <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Articles
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <% if logged_in? %>
+            <%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+          <% end %>  
+          <%= link_to "View articles", articles_path, class: "dropdown-item" %>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <% if logged_in? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            
+            <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Delete profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, onclick: "return confirm('Are you sure?')" %> 
+          </div>
+        </li>
+        <li class="nav-item">        
+          <%= button_to "Log out", logout_path, class: "nav-link text-white bg-black", method: :delete %>
+        </li>
+        
+      <% else %>
+        <li class="nav-item">        
+          <%= link_to "Log in", login_path, class: "nav-link" %>
+        </li>  
+        <li class="nav-item">        
+          <%= link_to "Sign up", signup_path, class: "nav-link" %>
+        </li>  
+      <% end %>
     </ul>
     
   </div>
