--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,26 @@
 
 <%= gravatar_for @user, size: 200 %>
 
+<div class="input-group justify-content-center mb-3 mt-3">
+<% if logged_in? && @user == current_user %>
+  <%= link_to "Edit your profile", edit_user_path(@user), class: " btn btn-outline-info btn-lg text-center" %>
+<% end %>
+</div>
+
 
 <h3 class="text-center mt-4">Articles</h3>
 
+
+<div class="flickr_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
+
 <%= render 'articles/article' %>
+
+<div class="flickr_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
 
 </div>
