--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,13 @@
                 <%= f.text_area :description, rows: 10, class: "form-control shadow mb-4 bg-white rounded", placeholder: "Description of article" %>
         </div>
       </div>
+
+      <div class="form-group row">
+        <%= f.label :category, class: "col-2 col-form-label text-light" %>
+        <div class="col-10"> 
+        <%= f.collection_select(:category_ids, Category.all, :id, :name, { prompt: "Make the selection from the list below"}, {multiple: true, sixe: 3, class: "custom-select shadow mb-4 rounded"}) %>
+        </div>
+      </div>
     
       <div class="input-group justify-content-center mb-3">
           <%= f.submit class: "btn btn-outline-light btn-lg text-center" %>
